<resources>
    <string name="app_name">Charge</string>
    <string name="title_activity_login">Charge</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Error_Email_format">Please input Valid Email Address!</string>
    <string name="Error_password_length">Please input Valid Password!</string>
    <string name="Error_empty_email">Please input Email Address</string>
    <string name="Error_empty_password">Please input Password</string>
    <string name="username">Username</string>
    <string name="add_photo">Add Photo</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Description</string>
    <string name="project_client">Client</string>
    <string name="project_location">Location</string>
    <string name="project_duration">Duration</string>
    <string name="project_start_date">Start Date</string>
    <string name="project_contractual_end_date">Contractual End Date</string>
    <string name="project_target_end_date">Target End Date</string>
    <string name="hint_target_end">Target End Date of Project</string>
    <string name="hint_contractual">Contractual End date of Project</string>
    <string name="hint_start">Start Date of Project</string>
    <string name="button">Button</string>
    <string name="btn_create">Create</string>
    <string name="status_ongoing">On Going.</string>
    <string name="status_late">Late</string>
    <string name="status_completed">completed</string>
    <string name="created_tasks">Created Tasks</string>
    <string name="created_date">Created Date</string>
    <string name="dlg_label">What Do You Want?</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_new">New</string>
    <string name="btn_delete">Delete</string>
    <string name="email_title">New Task has been created</string>

</resources>
