<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.task.charge.create_project"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray_light"
        app:popupTheme="@style/AppTheme.PopupOverlay">


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_name"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:singleLine="false"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_description"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_client"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_client"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_location"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_location"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:textColor="@color/textcolor" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_start_date"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_start"
                        android:inputType="none"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_contractual_end_date"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_cont_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_contractual"
                        android:inputType="none"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_target_end_date"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_tar_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_target_end"
                        android:inputType="none"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/project_duration"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_duration"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:hint="@string/project_duration"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:textColor="@color/textcolor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="@string/created_tasks"
                        android:textColor="@color/textcolor"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/created_tasks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/project_duration"
                        android:textColor="@color/textcolor" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>